2_Parser/loucomp/y.output
Terminals unused in grammar

   THEN
   END
   REPEAT
   UNTIL
   READ
   WRITE
   ERROR


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 var_declaration: INT saveid SEMI
    7                | INT saveid LBRACE savenum RBRACE SEMI
    8                | VOID saveid SEMI
    9                | VOID saveid LBRACE savenum RBRACE SEMI

   10 saveid: ID

   11 savenum: NUM

   12 @1: %empty

   13 fun_declaration: INT saveid @1 LPAREN params RPAREN compound_stmt

   14 @2: %empty

   15 fun_declaration: VOID saveid @2 LPAREN params RPAREN compound_stmt

   16 params: param_list
   17       | VOID

   18 param_list: param_list COMMA param
   19           | param

   20 param: INT saveid
   21      | INT saveid LBRACE RBRACE
   22      | VOID saveid
   23      | VOID saveid LBRACE RBRACE

   24 compound_stmt: LCURLY local_declarations statement_list RCURLY

   25 local_declarations: local_declarations var_declaration
   26                   | %empty

   27 statement_list: statement_list statement
   28               | %empty

   29 statement: expression_stmt
   30          | compound_stmt
   31          | selection_stmt
   32          | iteration_stmt
   33          | return_stmt

   34 expression_stmt: expression SEMI
   35                | SEMI

   36 selection_stmt: IF LPAREN expression RPAREN statement
   37               | IF LPAREN expression RPAREN statement ELSE statement

   38 iteration_stmt: WHILE LPAREN expression RPAREN statement

   39 return_stmt: RETURN SEMI
   40            | RETURN expression SEMI

   41 expression: var ASSIGN expression
   42           | simple_expression

   43 var: saveid

   44 @3: %empty

   45 var: saveid @3 LBRACE expression RBRACE

   46 simple_expression: additive_expression LE additive_expression
   47                  | additive_expression LT additive_expression
   48                  | additive_expression GT additive_expression
   49                  | additive_expression GE additive_expression
   50                  | additive_expression EQ additive_expression
   51                  | additive_expression NE additive_expression
   52                  | additive_expression

   53 additive_expression: additive_expression PLUS term
   54                    | additive_expression MINUS term
   55                    | term

   56 term: term TIMES factor
   57     | term OVER factor
   58     | factor

   59 factor: LPAREN expression RPAREN
   60       | var
   61       | call
   62       | NUM

   63 @4: %empty

   64 call: saveid @4 LPAREN args RPAREN

   65 args: arg_list
   66     | %empty

   67 arg_list: arg_list COMMA expression
   68         | expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 36 37
ELSE (259) 37
WHILE (260) 38
RETURN (261) 39 40
INT (262) 6 7 13 20 21
VOID (263) 8 9 15 17 22 23
THEN (264)
END (265)
REPEAT (266)
UNTIL (267)
READ (268)
WRITE (269)
ID (270) 10
NUM (271) 11 62
ASSIGN (272) 41
EQ (273) 50
NE (274) 51
LT (275) 47
LE (276) 46
GT (277) 48
GE (278) 49
PLUS (279) 53
MINUS (280) 54
TIMES (281) 56
OVER (282) 57
LPAREN (283) 13 15 36 37 38 59 64
RPAREN (284) 13 15 36 37 38 59 64
LBRACE (285) 7 9 21 23 45
RBRACE (286) 7 9 21 23 45
LCURLY (287) 24
RCURLY (288) 24
SEMI (289) 6 7 8 9 34 35 39 40
COMMA (290) 18 67
ERROR (291)
LOWER_THAN_ELSE (292)


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
program (39)
    on left: 1, on right: 0
declaration_list (40)
    on left: 2 3, on right: 1 2
declaration (41)
    on left: 4 5, on right: 2 3
var_declaration (42)
    on left: 6 7 8 9, on right: 4 25
saveid (43)
    on left: 10, on right: 6 7 8 9 13 15 20 21 22 23 43 45 64
savenum (44)
    on left: 11, on right: 7 9
fun_declaration (45)
    on left: 13 15, on right: 5
@1 (46)
    on left: 12, on right: 13
@2 (47)
    on left: 14, on right: 15
params (48)
    on left: 16 17, on right: 13 15
param_list (49)
    on left: 18 19, on right: 16 18
param (50)
    on left: 20 21 22 23, on right: 18 19
compound_stmt (51)
    on left: 24, on right: 13 15 30
local_declarations (52)
    on left: 25 26, on right: 24 25
statement_list (53)
    on left: 27 28, on right: 24 27
statement (54)
    on left: 29 30 31 32 33, on right: 27 36 37 38
expression_stmt (55)
    on left: 34 35, on right: 29
selection_stmt (56)
    on left: 36 37, on right: 31
iteration_stmt (57)
    on left: 38, on right: 32
return_stmt (58)
    on left: 39 40, on right: 33
expression (59)
    on left: 41 42, on right: 34 36 37 38 40 41 45 59 67 68
var (60)
    on left: 43 45, on right: 41 60
@3 (61)
    on left: 44, on right: 45
simple_expression (62)
    on left: 46 47 48 49 50 51 52, on right: 42
additive_expression (63)
    on left: 53 54 55, on right: 46 47 48 49 50 51 52 53 54
term (64)
    on left: 56 57 58, on right: 53 54 55 56 57
factor (65)
    on left: 59 60 61 62, on right: 56 57 58
call (66)
    on left: 64, on right: 61
@4 (67)
    on left: 63, on right: 64
args (68)
    on left: 65 66, on right: 64
arg_list (69)
    on left: 67 68, on right: 65 67


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    fun_declaration   go to state 7


State 1

    6 var_declaration: INT . saveid SEMI
    7                | INT . saveid LBRACE savenum RBRACE SEMI
   13 fun_declaration: INT . saveid @1 LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 8

    saveid  go to state 9


State 2

    8 var_declaration: VOID . saveid SEMI
    9                | VOID . saveid LBRACE savenum RBRACE SEMI
   15 fun_declaration: VOID . saveid @2 LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 8

    saveid  go to state 10


State 3

    0 $accept: program . $end

    $end  shift, and go to state 11


State 4

    1 program: declaration_list .
    2 declaration_list: declaration_list . declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration      go to state 12
    var_declaration  go to state 6
    fun_declaration  go to state 7


State 5

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


State 6

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


State 7

    5 declaration: fun_declaration .

    $default  reduce using rule 5 (declaration)


State 8

   10 saveid: ID .

    $default  reduce using rule 10 (saveid)


State 9

    6 var_declaration: INT saveid . SEMI
    7                | INT saveid . LBRACE savenum RBRACE SEMI
   13 fun_declaration: INT saveid . @1 LPAREN params RPAREN compound_stmt

    LBRACE  shift, and go to state 13
    SEMI    shift, and go to state 14

    $default  reduce using rule 12 (@1)

    @1  go to state 15


State 10

    8 var_declaration: VOID saveid . SEMI
    9                | VOID saveid . LBRACE savenum RBRACE SEMI
   15 fun_declaration: VOID saveid . @2 LPAREN params RPAREN compound_stmt

    LBRACE  shift, and go to state 16
    SEMI    shift, and go to state 17

    $default  reduce using rule 14 (@2)

    @2  go to state 18


State 11

    0 $accept: program $end .

    $default  accept


State 12

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


State 13

    7 var_declaration: INT saveid LBRACE . savenum RBRACE SEMI

    NUM  shift, and go to state 19

    savenum  go to state 20


State 14

    6 var_declaration: INT saveid SEMI .

    $default  reduce using rule 6 (var_declaration)


State 15

   13 fun_declaration: INT saveid @1 . LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 21


State 16

    9 var_declaration: VOID saveid LBRACE . savenum RBRACE SEMI

    NUM  shift, and go to state 19

    savenum  go to state 22


State 17

    8 var_declaration: VOID saveid SEMI .

    $default  reduce using rule 8 (var_declaration)


State 18

   15 fun_declaration: VOID saveid @2 . LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 23


State 19

   11 savenum: NUM .

    $default  reduce using rule 11 (savenum)


State 20

    7 var_declaration: INT saveid LBRACE savenum . RBRACE SEMI

    RBRACE  shift, and go to state 24


State 21

   13 fun_declaration: INT saveid @1 LPAREN . params RPAREN compound_stmt

    INT   shift, and go to state 25
    VOID  shift, and go to state 26

    params      go to state 27
    param_list  go to state 28
    param       go to state 29


State 22

    9 var_declaration: VOID saveid LBRACE savenum . RBRACE SEMI

    RBRACE  shift, and go to state 30


State 23

   15 fun_declaration: VOID saveid @2 LPAREN . params RPAREN compound_stmt

    INT   shift, and go to state 25
    VOID  shift, and go to state 26

    params      go to state 31
    param_list  go to state 28
    param       go to state 29


State 24

    7 var_declaration: INT saveid LBRACE savenum RBRACE . SEMI

    SEMI  shift, and go to state 32


State 25

   20 param: INT . saveid
   21      | INT . saveid LBRACE RBRACE

    ID  shift, and go to state 8

    saveid  go to state 33


State 26

   17 params: VOID .
   22 param: VOID . saveid
   23      | VOID . saveid LBRACE RBRACE

    ID  shift, and go to state 8

    $default  reduce using rule 17 (params)

    saveid  go to state 34


State 27

   13 fun_declaration: INT saveid @1 LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 35


State 28

   16 params: param_list .
   18 param_list: param_list . COMMA param

    COMMA  shift, and go to state 36

    $default  reduce using rule 16 (params)


State 29

   19 param_list: param .

    $default  reduce using rule 19 (param_list)


State 30

    9 var_declaration: VOID saveid LBRACE savenum RBRACE . SEMI

    SEMI  shift, and go to state 37


State 31

   15 fun_declaration: VOID saveid @2 LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 38


State 32

    7 var_declaration: INT saveid LBRACE savenum RBRACE SEMI .

    $default  reduce using rule 7 (var_declaration)


State 33

   20 param: INT saveid .
   21      | INT saveid . LBRACE RBRACE

    LBRACE  shift, and go to state 39

    $default  reduce using rule 20 (param)


State 34

   22 param: VOID saveid .
   23      | VOID saveid . LBRACE RBRACE

    LBRACE  shift, and go to state 40

    $default  reduce using rule 22 (param)


State 35

   13 fun_declaration: INT saveid @1 LPAREN params RPAREN . compound_stmt

    LCURLY  shift, and go to state 41

    compound_stmt  go to state 42


State 36

   18 param_list: param_list COMMA . param

    INT   shift, and go to state 25
    VOID  shift, and go to state 43

    param  go to state 44


State 37

    9 var_declaration: VOID saveid LBRACE savenum RBRACE SEMI .

    $default  reduce using rule 9 (var_declaration)


State 38

   15 fun_declaration: VOID saveid @2 LPAREN params RPAREN . compound_stmt

    LCURLY  shift, and go to state 41

    compound_stmt  go to state 45


State 39

   21 param: INT saveid LBRACE . RBRACE

    RBRACE  shift, and go to state 46


State 40

   23 param: VOID saveid LBRACE . RBRACE

    RBRACE  shift, and go to state 47


State 41

   24 compound_stmt: LCURLY . local_declarations statement_list RCURLY

    $default  reduce using rule 26 (local_declarations)

    local_declarations  go to state 48


State 42

   13 fun_declaration: INT saveid @1 LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 13 (fun_declaration)


State 43

   22 param: VOID . saveid
   23      | VOID . saveid LBRACE RBRACE

    ID  shift, and go to state 8

    saveid  go to state 34


State 44

   18 param_list: param_list COMMA param .

    $default  reduce using rule 18 (param_list)


State 45

   15 fun_declaration: VOID saveid @2 LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 15 (fun_declaration)


State 46

   21 param: INT saveid LBRACE RBRACE .

    $default  reduce using rule 21 (param)


State 47

   23 param: VOID saveid LBRACE RBRACE .

    $default  reduce using rule 23 (param)


State 48

   24 compound_stmt: LCURLY local_declarations . statement_list RCURLY
   25 local_declarations: local_declarations . var_declaration

    INT   shift, and go to state 49
    VOID  shift, and go to state 50

    $default  reduce using rule 28 (statement_list)

    var_declaration  go to state 51
    statement_list   go to state 52


State 49

    6 var_declaration: INT . saveid SEMI
    7                | INT . saveid LBRACE savenum RBRACE SEMI

    ID  shift, and go to state 8

    saveid  go to state 53


State 50

    8 var_declaration: VOID . saveid SEMI
    9                | VOID . saveid LBRACE savenum RBRACE SEMI

    ID  shift, and go to state 8

    saveid  go to state 54


State 51

   25 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 25 (local_declarations)


State 52

   24 compound_stmt: LCURLY local_declarations statement_list . RCURLY
   27 statement_list: statement_list . statement

    IF      shift, and go to state 55
    WHILE   shift, and go to state 56
    RETURN  shift, and go to state 57
    ID      shift, and go to state 8
    NUM     shift, and go to state 58
    LPAREN  shift, and go to state 59
    LCURLY  shift, and go to state 41
    RCURLY  shift, and go to state 60
    SEMI    shift, and go to state 61

    saveid               go to state 62
    compound_stmt        go to state 63
    statement            go to state 64
    expression_stmt      go to state 65
    selection_stmt       go to state 66
    iteration_stmt       go to state 67
    return_stmt          go to state 68
    expression           go to state 69
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 53

    6 var_declaration: INT saveid . SEMI
    7                | INT saveid . LBRACE savenum RBRACE SEMI

    LBRACE  shift, and go to state 13
    SEMI    shift, and go to state 14


State 54

    8 var_declaration: VOID saveid . SEMI
    9                | VOID saveid . LBRACE savenum RBRACE SEMI

    LBRACE  shift, and go to state 16
    SEMI    shift, and go to state 17


State 55

   36 selection_stmt: IF . LPAREN expression RPAREN statement
   37               | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 76


State 56

   38 iteration_stmt: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 77


State 57

   39 return_stmt: RETURN . SEMI
   40            | RETURN . expression SEMI

    ID      shift, and go to state 8
    NUM     shift, and go to state 58
    LPAREN  shift, and go to state 59
    SEMI    shift, and go to state 78

    saveid               go to state 62
    expression           go to state 79
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 58

   62 factor: NUM .

    $default  reduce using rule 62 (factor)


State 59

   59 factor: LPAREN . expression RPAREN

    ID      shift, and go to state 8
    NUM     shift, and go to state 58
    LPAREN  shift, and go to state 59

    saveid               go to state 62
    expression           go to state 80
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 60

   24 compound_stmt: LCURLY local_declarations statement_list RCURLY .

    $default  reduce using rule 24 (compound_stmt)


State 61

   35 expression_stmt: SEMI .

    $default  reduce using rule 35 (expression_stmt)


State 62

   43 var: saveid .
   45    | saveid . @3 LBRACE expression RBRACE
   64 call: saveid . @4 LPAREN args RPAREN

    LPAREN    reduce using rule 63 (@4)
    LBRACE    reduce using rule 44 (@3)
    $default  reduce using rule 43 (var)

    @3  go to state 81
    @4  go to state 82


State 63

   30 statement: compound_stmt .

    $default  reduce using rule 30 (statement)


State 64

   27 statement_list: statement_list statement .

    $default  reduce using rule 27 (statement_list)


State 65

   29 statement: expression_stmt .

    $default  reduce using rule 29 (statement)


State 66

   31 statement: selection_stmt .

    $default  reduce using rule 31 (statement)


State 67

   32 statement: iteration_stmt .

    $default  reduce using rule 32 (statement)


State 68

   33 statement: return_stmt .

    $default  reduce using rule 33 (statement)


State 69

   34 expression_stmt: expression . SEMI

    SEMI  shift, and go to state 83


State 70

   41 expression: var . ASSIGN expression
   60 factor: var .

    ASSIGN  shift, and go to state 84

    $default  reduce using rule 60 (factor)


State 71

   42 expression: simple_expression .

    $default  reduce using rule 42 (expression)


State 72

   46 simple_expression: additive_expression . LE additive_expression
   47                  | additive_expression . LT additive_expression
   48                  | additive_expression . GT additive_expression
   49                  | additive_expression . GE additive_expression
   50                  | additive_expression . EQ additive_expression
   51                  | additive_expression . NE additive_expression
   52                  | additive_expression .
   53 additive_expression: additive_expression . PLUS term
   54                    | additive_expression . MINUS term

    EQ     shift, and go to state 85
    NE     shift, and go to state 86
    LT     shift, and go to state 87
    LE     shift, and go to state 88
    GT     shift, and go to state 89
    GE     shift, and go to state 90
    PLUS   shift, and go to state 91
    MINUS  shift, and go to state 92

    $default  reduce using rule 52 (simple_expression)


State 73

   55 additive_expression: term .
   56 term: term . TIMES factor
   57     | term . OVER factor

    TIMES  shift, and go to state 93
    OVER   shift, and go to state 94

    $default  reduce using rule 55 (additive_expression)


State 74

   58 term: factor .

    $default  reduce using rule 58 (term)


State 75

   61 factor: call .

    $default  reduce using rule 61 (factor)


State 76

   36 selection_stmt: IF LPAREN . expression RPAREN statement
   37               | IF LPAREN . expression RPAREN statement ELSE statement

    ID      shift, and go to state 8
    NUM     shift, and go to state 58
    LPAREN  shift, and go to state 59

    saveid               go to state 62
    expression           go to state 95
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 77

   38 iteration_stmt: WHILE LPAREN . expression RPAREN statement

    ID      shift, and go to state 8
    NUM     shift, and go to state 58
    LPAREN  shift, and go to state 59

    saveid               go to state 62
    expression           go to state 96
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 78

   39 return_stmt: RETURN SEMI .

    $default  reduce using rule 39 (return_stmt)


State 79

   40 return_stmt: RETURN expression . SEMI

    SEMI  shift, and go to state 97


State 80

   59 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 98


State 81

   45 var: saveid @3 . LBRACE expression RBRACE

    LBRACE  shift, and go to state 99


State 82

   64 call: saveid @4 . LPAREN args RPAREN

    LPAREN  shift, and go to state 100


State 83

   34 expression_stmt: expression SEMI .

    $default  reduce using rule 34 (expression_stmt)


State 84

   41 expression: var ASSIGN . expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 58
    LPAREN  shift, and go to state 59

    saveid               go to state 62
    expression           go to state 101
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 85

   50 simple_expression: additive_expression EQ . additive_expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 58
    LPAREN  shift, and go to state 59

    saveid               go to state 62
    var                  go to state 102
    additive_expression  go to state 103
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 86

   51 simple_expression: additive_expression NE . additive_expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 58
    LPAREN  shift, and go to state 59

    saveid               go to state 62
    var                  go to state 102
    additive_expression  go to state 104
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 87

   47 simple_expression: additive_expression LT . additive_expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 58
    LPAREN  shift, and go to state 59

    saveid               go to state 62
    var                  go to state 102
    additive_expression  go to state 105
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 88

   46 simple_expression: additive_expression LE . additive_expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 58
    LPAREN  shift, and go to state 59

    saveid               go to state 62
    var                  go to state 102
    additive_expression  go to state 106
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 89

   48 simple_expression: additive_expression GT . additive_expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 58
    LPAREN  shift, and go to state 59

    saveid               go to state 62
    var                  go to state 102
    additive_expression  go to state 107
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 90

   49 simple_expression: additive_expression GE . additive_expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 58
    LPAREN  shift, and go to state 59

    saveid               go to state 62
    var                  go to state 102
    additive_expression  go to state 108
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 91

   53 additive_expression: additive_expression PLUS . term

    ID      shift, and go to state 8
    NUM     shift, and go to state 58
    LPAREN  shift, and go to state 59

    saveid  go to state 62
    var     go to state 102
    term    go to state 109
    factor  go to state 74
    call    go to state 75


State 92

   54 additive_expression: additive_expression MINUS . term

    ID      shift, and go to state 8
    NUM     shift, and go to state 58
    LPAREN  shift, and go to state 59

    saveid  go to state 62
    var     go to state 102
    term    go to state 110
    factor  go to state 74
    call    go to state 75


State 93

   56 term: term TIMES . factor

    ID      shift, and go to state 8
    NUM     shift, and go to state 58
    LPAREN  shift, and go to state 59

    saveid  go to state 62
    var     go to state 102
    factor  go to state 111
    call    go to state 75


State 94

   57 term: term OVER . factor

    ID      shift, and go to state 8
    NUM     shift, and go to state 58
    LPAREN  shift, and go to state 59

    saveid  go to state 62
    var     go to state 102
    factor  go to state 112
    call    go to state 75


State 95

   36 selection_stmt: IF LPAREN expression . RPAREN statement
   37               | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 113


State 96

   38 iteration_stmt: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 114


State 97

   40 return_stmt: RETURN expression SEMI .

    $default  reduce using rule 40 (return_stmt)


State 98

   59 factor: LPAREN expression RPAREN .

    $default  reduce using rule 59 (factor)


State 99

   45 var: saveid @3 LBRACE . expression RBRACE

    ID      shift, and go to state 8
    NUM     shift, and go to state 58
    LPAREN  shift, and go to state 59

    saveid               go to state 62
    expression           go to state 115
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 100

   64 call: saveid @4 LPAREN . args RPAREN

    ID      shift, and go to state 8
    NUM     shift, and go to state 58
    LPAREN  shift, and go to state 59

    $default  reduce using rule 66 (args)
